--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+Collectfasta==3.2.0
 colorama==0.4.6
 contourpy==1.2.1
 cookiecutter==2.6.0
@@ -37,6 +38,7 @@ django-debug-toolbar==4.4.6
 django-environ==0.11.2
 django-extensions==3.2.3
 django-libsass==0.9
+django-storages==1.14.4
 djangorestframework==3.15.2
 dnspython==2.6.1
 einops==0.8.0
