--- a/requirements.txt
+++ b/requirements.txt
@@ -31,6 +31,7 @@ cycler==0.12.1
 diffusers==0.28.2
 Django==5.0.4
 django-allauth==65.3.0
+django-anymail==12.0
 django-appconf==1.0.6
 django-compressor==4.4
 django-crispy-forms==2.3
