--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,8 @@ asgiref==3.8.1
 attrs==23.2.0
 billiard==4.2.0
 binaryornot==0.4.4
+boto3==1.35.82
+botocore==1.35.82
 build==1.2.2.post1
 celery==5.4.0
 certifi==2024.6.2
@@ -67,6 +69,7 @@ importlib_resources==6.4.0
 iniconfig==2.0.0
 intel-openmp==2021.4.0
 Jinja2==3.1.4
+jmespath==1.0.1
 jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 kiwisolver==1.4.5
@@ -114,6 +117,7 @@ rich==13.7.1
 rjsmin==1.2.1
 rpds-py==0.18.1
 ruff==0.4.8
+s3transfer==0.10.4
 safetensors==0.4.3
 semantic-version==2.10.0
 serializers==0.2.4
